src/test/resources/success/basic/Problem1.scala
package success.basic

import forcedtodo.todo

@todo("Is fine", "2050-08-04")
class Problem1 {
}


