src/test/resources/fail/mixed/Okk.scala
package fail.mixed

import forcedtodo.todo

@todo("This one is fine", "2050-08-04")
class Okk {

}
